Added export all data to excel (#7)
* added to export

* fixes

* gradle script updates